[package]
name = "wxcrypt"
version = "0.2.1"
authors = ["Yiye <87362775@qq.com>"]
edition = "2018"
description = "企业微信消息加解密Rust版"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
aes = "0.3.2"
aes-soft = "0.3.3"
block-modes = "0.3.3"
base64 = "0.11.0"
urldecode = "0.1.1"
byteorder = "1.3.4"
rand = "0.7.3"
chrono = "0.4.10"
serde-xml-rs = "0.3.1"
serde_derive = "1.0"
serde = "1.0"